Funcionalidad BDD básica
Se puede leer y escribir circuitos. Aún hay que arreglar leaks al borrar piezas (se borran del circuito pero no de la BDD), y hacer unas ventanas de selección de circuitos que permita borrarlos etc.